apps/filebrowser/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: filebrowser
    name: filebrowser
  name: filebrowser
spec:
  finalizers:
    - kubernetes
