apps/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.32.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: filebrowser
              mountPath: /srv
              subPath: files
            - name: filebrowser
              mountPath: /database.db
              subPath: database.db
            - name: filebrowser-scripts
              mountPath: /scripts
          ports:
            - containerPort: 44301
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              memory: 512Mi
          command: ["/bin/sh", "-c", "/scripts/init-filebrowser.sh"]
      volumes:
        - name: filebrowser
          persistentVolumeClaim:
            claimName: filebrowser
        - name: filebrowser-scripts
          configMap:
            name: filebrowser-scripts
            defaultMode: 0755
