apps/filebrowser/ingress-tailscale.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: filebrowser
      port:
        number: 44301
  tls:
    - hosts:
        - filebrowser
